[gd_scene load_steps=4 format=3 uid="uid://bj8lmxc2dxnvw"]

[ext_resource type="Script" uid="uid://chuhwc3vkh334" path="res://Script/chat_ui.gd" id="1_clo65"]
[ext_resource type="AudioStream" uid="uid://bjscy6bjsvuee" path="res://sfx/BROKEN GLASS - SOUND EFFECT - Sounds and Music Library (mp3cut.net).mp3" id="2_3vdee"]
[ext_resource type="AudioStream" uid="uid://ghrtgyisujyj" path="res://Scene/Creepy Footsteps- Sound Effect for Editing - Sound Effect Nexus.mp3" id="3_mit4e"]

[node name="ChatUI" type="CanvasLayer"]
script = ExtResource("1_clo65")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 0

[node name="ChatLog" type="RichTextLabel" parent="Panel"]
custom_minimum_size = Vector2(400, 120)
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 29.0
offset_top = -393.0
offset_right = -579.0
offset_bottom = -213.0
grow_horizontal = 2
grow_vertical = 0
mouse_filter = 2
bbcode_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -189.0
offset_bottom = -127.0
grow_horizontal = 2
grow_vertical = 0
theme_override_constants/separation = 10

[node name="Button_OptionA" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button_OptionB" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button_OptionC" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="Button_OptionD" type="Button" parent="Panel/VBoxContainer"]
layout_mode = 2

[node name="BrokenGlass" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_3vdee")
volume_db = -10.0

[node name="CreepyFootsteps-SoundEffectForEditing-SoundEffectNexus" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_mit4e")

[connection signal="pressed" from="Panel/VBoxContainer/Button_OptionA" to="." method="_on_button_option_a_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button_OptionB" to="." method="_on_button_option_b_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button_OptionC" to="." method="_on_button_option_c_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/Button_OptionD" to="." method="_on_button_option_d_pressed"]
